Added re-randomize functionality Added manual select functionality Added character highlight

--- a/public/sources/controller.html
+++ b/public/sources/controller.html
@@ -24,8 +24,10 @@
             </div>
             <div class="results">
                 <button class="hide" id="win">Win</button>
-                <button class="hide" id="random">Randomize</button>
                 <button class="hide" id="lose">Lose</button>
+            </div>
+            <div class="results">
+                <button class="hide" id="random">Randomize</button>
             </div>
         </div>
         <div class="grid-container complete">
